--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     </nav>
     <section>
         <h2>Welcome to Weat</h2>
-        <p>Your go-to place for all things weather-related.</p>
+        <p>Where meal prep is made easy</p>
     </section>
     <footer>
         <p>&copy; 2024 Weat. All rights reserved.</p>
