--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 
     <script src="https://www.gstatic.com/firebasejs/9.5.0/firebase-app.js"></script>
     <script src="https://www.gstatic.com/firebasejs/9.5.0/firebase-database.js"></script>
-    <script src="/assets/javaScript.js"></script>
+    <script src="assets/javaScript.js"></script>
 </head>
 
 <body>
