--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <title>Weat - Home</title>
     <link rel="stylesheet" href="assets/style.css">
 
+    <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
     <script src="https://www.gstatic.com/firebasejs/9.5.0/firebase-app.js"></script>
     <script src="https://www.gstatic.com/firebasejs/9.5.0/firebase-database.js"></script>
     <script src="assets/javaScript.js"></script>
