--- a/index.html
+++ b/index.html
@@ -12,6 +12,21 @@
     <script src="https://www.gstatic.com/firebasejs/9.5.0/firebase-app.js"></script>
     <script src="https://www.gstatic.com/firebasejs/9.5.0/firebase-database.js"></script>
     <script src="https://www.gstatic.com/firebasejs/9.5.0/firebase.js"></script>
+
+    <script>
+        var config = {
+            apiKey: "AIzaSyD2odY5xcmS2nSXzWYwO16xg90kF-GfF4s",
+            authDomain: "weat-bde5f.firebaseapp.com",
+            databaseURL: "https://weat-bde5f-default-rtdb.firebaseio.com",
+            projectId: "weat-bde5f",
+            storageBucket: "weat-bde5f.appspot.com",
+            messagingSenderId: "760459252475",
+            appId: "1:760459252475:web:fd68f7fc096d73c1ded65e",
+            measurementId: "G-RXLEC4XSB0"
+        };
+        firebase.initializeApp(config);
+    </script>
+
     <script src="assets/javaScript.js"></script>
 </head>
 
