--- a/index.html
+++ b/index.html
@@ -4,30 +4,19 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Weat - Home</title>
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
 
-    <link rel="stylesheet" href="assets/style.css">
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/modernizr/2.8.3/modernizr.min.js" type="text/javascript"></script>
 
-    <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
-    <script src="https://www.gstatic.com/firebasejs/9.5.0/firebase-app.js"></script>
-    <script src="https://www.gstatic.com/firebasejs/9.5.0/firebase-database.js"></script>
-    <script src="https://www.gstatic.com/firebasejs/9.5.0/firebase.js"></script>
 
-    <script>
-        var config = {
-            apiKey: "AIzaSyD2odY5xcmS2nSXzWYwO16xg90kF-GfF4s",
-            authDomain: "weat-bde5f.firebaseapp.com",
-            databaseURL: "https://weat-bde5f-default-rtdb.firebaseio.com",
-            projectId: "weat-bde5f",
-            storageBucket: "weat-bde5f.appspot.com",
-            messagingSenderId: "760459252475",
-            appId: "1:760459252475:web:fd68f7fc096d73c1ded65e",
-            measurementId: "G-RXLEC4XSB0"
-        };
-        firebase.initializeApp(config);
-    </script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/5.0.1/firebase.js"></script>
 
+    <link href="assets/style.css" rel="stylesheet">
     <script src="assets/javaScript.js"></script>
+    
+    <title>Weat - Home</title>
 </head>
 
 <body>
