--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
 
     <script src="https://www.gstatic.com/firebasejs/10.11.0/firebase-app.js"></script>
     <script src="https://www.gstatic.com/firebasejs/10.11.0/firebase-database.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/10.11.0/firebase.js"></script>
 
     <link href="assets/style.css" rel="stylesheet">
     <script src="assets/javaScript.js"></script>
