--- a/index.html
+++ b/index.html
@@ -15,7 +15,30 @@
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/modernizr/2.8.3/modernizr.min.js" type="text/javascript"></script>
 
-    <script src="https://www.gstatic.com/firebasejs/9.1.0/firebase.js"></script>
+    <script type="module">
+        // Import the functions you need from the SDKs you need
+        import { initializeApp } from "https://www.gstatic.com/firebasejs/10.11.0/firebase-app.js";
+        import { getAnalytics } from "https://www.gstatic.com/firebasejs/10.11.0/firebase-analytics.js";
+        // TODO: Add SDKs for Firebase products that you want to use
+        // https://firebase.google.com/docs/web/setup#available-libraries
+      
+        // Your web app's Firebase configuration
+        // For Firebase JS SDK v7.20.0 and later, measurementId is optional
+        const firebaseConfig = {
+          apiKey: "AIzaSyD2odY5xcmS2nSXzWYwO16xg90kF-GfF4s",
+          authDomain: "weat-bde5f.firebaseapp.com",
+          databaseURL: "https://weat-bde5f-default-rtdb.firebaseio.com",
+          projectId: "weat-bde5f",
+          storageBucket: "weat-bde5f.appspot.com",
+          messagingSenderId: "760459252475",
+          appId: "1:760459252475:web:fd68f7fc096d73c1ded65e",
+          measurementId: "G-RXLEC4XSB0"
+        };
+      
+        // Initialize Firebase
+        const app = initializeApp(firebaseConfig);
+        const analytics = getAnalytics(app);
+      </script>
 
     <link href="assets/style.css" rel="stylesheet">
     <script src="assets/javaScript.js"></script>
